# amhello

./: Makefile.am  README.md  configure.ac
src/: main.c
