# Initialize Autoconf.
AC_INIT([amhello], [1.0], [knknkn1162@gmail.com])
# Initialize Automake. If you specify foreign keyword, you should prepare special project files(`NEWS`, `README`, `AUTHORS` and `ChangeLog`)
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
# Check for a C compiler.
AC_PROG_CC
# Checks for libraries.
# Checks for header files.
# Checks for typedefs, structures, and compiler characteristics.
# Checks for library functions.
# Declare config.h as output header.
AC_CONFIG_HEADERS([config.h])
# Declare Makefile and src/Makefile as output files.
AC_CONFIG_FILES([Makefile src/Makefile])
# Actually output all declared files.
AC_OUTPUT
